force-app/main/default/objects/Opportunity/fields/crms11__Conditions__c.field-meta.xml
<CustomField>
    <fullName>crms11__Conditions__c</fullName>
    <label>Conditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>