force-app/main/default/objects/Opportunity/fields/crms11__Create_Update_Subscription__c.field-meta.xml
<CustomField>
    <fullName>crms11__Create_Update_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create/Update Subscription</label>
    <type>Checkbox</type>
</CustomField>