force-app/main/default/objects/Opportunity/fields/crms11__Default_Location__c.field-meta.xml
<CustomField>
    <fullName>crms11__Default_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Location</label>
    <referenceTo>crms11__Location__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>