force-app/main/default/objects/Opportunity/fields/crms11__Default_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>crms11__Default_Start_Date__c</fullName>
    <label>Default Start Date</label>
    <type>Date</type>
</CustomField>