force-app/main/default/objects/Opportunity/fields/crms11__Is_Renewed__c.field-meta.xml
<CustomField>
    <fullName>crms11__Is_Renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Opportunity created by Subscription Renewal Process</inlineHelpText>
    <label>Is Renewed</label>
    <type>Checkbox</type>
</CustomField>