force-app/main/default/objects/Opportunity/fields/crms11__Language__c.field-meta.xml
<CustomField>
    <fullName>crms11__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>crms11__Languages</valueSetName>
    </valueSet>
</CustomField>