force-app/main/default/objects/Opportunity/fields/crms11__New_Contract_Term_months__c.field-meta.xml
<CustomField>
    <fullName>crms11__New_Contract_Term_months__c</fullName>
    <label>New Contract Term (months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>