force-app/main/default/objects/Opportunity/fields/crms11__Original_Contract__c.field-meta.xml
<CustomField>
    <fullName>crms11__Original_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>