force-app/main/default/objects/Opportunity/fields/crms11__QuoteBeginDate__c.field-meta.xml
<CustomField>
    <fullName>crms11__QuoteBeginDate__c</fullName>
    <label>Quote Start Date</label>
    <type>Date</type>
</CustomField>