force-app/main/default/objects/Opportunity/fields/crms11__QuoteBillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>crms11__QuoteBillingFrequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>