force-app/main/default/objects/Opportunity/fields/crms11__QuoteEndDate__c.field-meta.xml
<CustomField>
    <fullName>crms11__QuoteEndDate__c</fullName>
    <label>Quote End Date</label>
    <type>Date</type>
</CustomField>