force-app/main/default/objects/Opportunity/fields/crms11__QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>crms11__QuoteNumber__c</fullName>
    <label>Quote Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>