force-app/main/default/objects/Opportunity/fields/crms11__QuotePaymentTime__c.field-meta.xml
<CustomField>
    <fullName>crms11__QuotePaymentTime__c</fullName>
    <label>Payment Terms</label>
    <length>32</length>
    <type>Text</type>
</CustomField>