force-app/main/default/objects/Opportunity/fields/crms11__QuoteVersion__c.field-meta.xml
<CustomField>
    <fullName>crms11__QuoteVersion__c</fullName>
    <label>Quote Version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>