force-app/main/default/objects/Opportunity/fields/crms11__Recalculate_Finance_Schedule__c.field-meta.xml
<CustomField>
    <fullName>crms11__Recalculate_Finance_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Finance Schedule</label>
    <type>Checkbox</type>
</CustomField>