force-app/main/default/objects/Opportunity/fields/crms11__Scheduled_Billing_Period_months__c.field-meta.xml
<CustomField>
    <fullName>crms11__Scheduled_Billing_Period_months__c</fullName>
    <label>Scheduled Billing Period (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>